--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "daisyui": "^2.17.0",
+    "date-fns": "^2.28.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.0.7",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
