--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "daisyui": "^2.17.0",
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-day-picker": "^8.0.7",
     "react-dom": "^18.2.0",
